serf-demo/cloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",

    "Mappings" : {
        "AWSNATAMI" : {
          "us-east-1"      : { "AMI" : "ami-c6699baf" },
          "us-west-2"      : { "AMI" : "ami-52ff7262" },
          "us-west-1"      : { "AMI" : "ami-3bcc9e7e" },
          "eu-west-1"      : { "AMI" : "ami-0b5b6c7f" },
          "ap-southeast-1" : { "AMI" : "ami-02eb9350" },
          "ap-southeast-2" : { "AMI" : "ami-ab990e91" },
          "ap-northeast-1" : { "AMI" : "ami-14d86d15" },
          "sa-east-1"      : { "AMI" : "ami-0439e619" }
        },

        "AWSINSTAMI" : {
          "us-east-1"      : { "AMI" : "ami-a73264ce" },
          "us-west-2"      : { "AMI" : "ami-6aad335a" },
          "us-west-1"      : { "AMI" : "ami-acf9cde9" },
          "eu-west-1"      : { "AMI" : "ami-8e987ef9" },
          "ap-southeast-1" : { "AMI" : "ami-b84e04ea" },
          "ap-southeast-2" : { "AMI" : "ami-3d128f07" },
          "ap-northeast-1" : { "AMI" : "ami-3f32ac3e" },
          "sa-east-1"      : { "AMI" : "ami-35258228" }
        }
    },

    "Parameters": {
        "MonInstanceClass": {
            "Type": "String",
            "Default": "m1.small",
            "Description": "Size of Monitor Service Instance."
        },

        "WebInstanceClass": {
            "Type": "String",
            "Default": "m1.small",
            "Description": "Size of Web Service Instance."
        },

        "WebNodesMin": {
            "Type": "String",
            "Default": "2",
            "Description": "Number of min web servers to launch."
        },

        "WebNodesMax": {
            "Type": "String",
            "Default": "5",
            "Description": "Number of max web servers to launch."
        }

    },

    "Outputs": {
        "LoadBalancerIP": {
            "Value": { "Ref": "LoadBalancerIP" }
        }
    },

    "Resources": {

        "Gateway": {
            "Type": "AWS::EC2::InternetGateway"
        },

        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsHostnames": true
            }
        },

        "VPCGateway": {
            "Type" : "AWS::EC2::VPCGatewayAttachment",
            "Properties" : {
                "InternetGatewayId" : { "Ref": "Gateway" },
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.1.0/24",
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PrivateSubnetRoute": {
            "Type" : "AWS::EC2::SubnetRouteTableAssociation",
            "Properties" : {
                "RouteTableId" : { "Ref": "PrivateRouteTable" },
                "SubnetId" : { "Ref": "PrivateSubnet" }
            }
        },

        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PrivateRouteGlobal": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "PrivateRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "InstanceId" : { "Ref" : "NATDevice" }
            },
            "DependsOn": "PublicRouteGlobal"
        },

        "PublicSubnetRoute": {
            "Type" : "AWS::EC2::SubnetRouteTableAssociation",
            "Properties" : {
                "RouteTableId" : { "Ref": "PublicRouteTable" },
                "SubnetId" : { "Ref": "PublicSubnet" }
            }
        },

        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" }
            }
        },

        "PublicRouteGlobal": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "Gateway" }
            }
        },

        "NATIPAddress": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain": "vpc",
                "InstanceId": { "Ref": "NATDevice" }
            },
            "DependsOn": "VPCGateway"
        },

        "NATDevice" : {
            "Type" : "AWS::EC2::Instance",
            "Properties" : {
                "SubnetId" : { "Ref" : "PublicSubnet" },
                "SourceDestCheck" : "false",
                "ImageId" : { "Fn::FindInMap" : [ "AWSNATAMI", { "Ref" : "AWS::Region" }, "AMI" ]},
                "SecurityGroupIds" : [
                    { "Ref" : "InstanceSecurityGroup" }
                ],
                "Tags": [
                    { "Key": "Name", "Value": "NAT Device" }
                ]
            }
        },

        "MonitorGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "AvailabilityZones": [
                    { "Fn::GetAtt" : [ "PrivateSubnet", "AvailabilityZone" ] }
                ],
                "LaunchConfigurationName": { "Ref": "MonitorLaunchConfig" },
                "DesiredCapacity": "1",
                "MinSize": "1",
                "MaxSize": "1",
                "Tags": [
                    { "Key": "Name", "Value": "MonitorService", "PropagateAtLaunch": "True" },
                    { "Key": "Serf", "Value": "cluster", "PropagateAtLaunch": "True" }
                ],
                "VPCZoneIdentifier": [
                    { "Ref": "PrivateSubnet" }
                ]
            },
            "DependsOn": "PublicRouteGlobal"
        },

        "MonitorLaunchConfig": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "ImageId": { "Fn::FindInMap" : [ "AWSINSTAMI", { "Ref" : "AWS::Region" }, "AMI" ]},
                "InstanceType": { "Ref" : "MonInstanceClass" },
                "KeyName": "sshkey",
                "IamInstanceProfile": "ec2role",
                "SecurityGroups": [
                    {"Ref": "InstanceSecurityGroup"}
                ],
                "UserData": "IyEvYmluL2Jhc2gKTk9ERV9TRVRVUF9VUkw9Imh0dHBzOi8vcmF3LmdpdGh1Yi5jb20vZW91c3Bob3Jvcy9zZXJmL21hc3Rlci9kZW1vL3dlYi1sb2FkLWJhbGFuY2VyL3NldHVwX21vbml0b3Iuc2giCgpTRVJGX1NFVFVQX1VSTD0iaHR0cHM6Ly9yYXcuZ2l0aHViLmNvbS9lb3VzcGhvcm9zL3NlcmYvbWFzdGVyL2RlbW8vd2ViLWxvYWQtYmFsYW5jZXIvc2V0dXBfc2VyZi5zaCIKCiMgU2V0dXAgdGhlIG5vZGUgaXRzZWxmCndnZXQgLU8gLSAkTk9ERV9TRVRVUF9VUkwgfCBiYXNoCgojIFNldHVwIHRoZSBzZXJmIGFnZW50CmV4cG9ydCBTRVJGX1JPTEU9Im1vbiIKd2dldCAtTyAtICRTRVJGX1NFVFVQX1VSTCB8IGJhc2g [...]
            }
        },

        "LoadBalancer": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": { "Fn::FindInMap" : [ "AWSINSTAMI", { "Ref" : "AWS::Region" }, "AMI" ]},
                "PrivateIpAddress": "10.0.0.5",
                "SecurityGroupIds": [
                    {"Ref": "InstanceSecurityGroup"}
                ],
                "SubnetId": { "Ref": "PublicSubnet" },
                "IamInstanceProfile": "ec2role",
                "KeyName": "sshkey",
                "Tags": [
                    { "Key": "Name", "Value": "LoadBalancer" },
                    { "Key": "Serf", "Value": "cluster" }
                ],
                "UserData": "IyEvYmluL2Jhc2gKTk9ERV9TRVRVUF9VUkw9Imh0dHBzOi8vcmF3LmdpdGh1Yi5jb20vZW91c3Bob3Jvcy9zZXJmL21hc3Rlci9kZW1vL3dlYi1sb2FkLWJhbGFuY2VyL3NldHVwX2xvYWRfYmFsYW5jZXIuc2giCgpTRVJGX1NFVFVQX1VSTD0iaHR0cHM6Ly9yYXcuZ2l0aHViLmNvbS9lb3VzcGhvcm9zL3NlcmYvbWFzdGVyL2RlbW8vd2ViLWxvYWQtYmFsYW5jZXIvc2V0dXBfc2VyZi5zaCIKCiMgU2V0dXAgdGhlIG5vZGUgaXRzZWxmCndnZXQgLU8gLSAkTk9ERV9TRVRVUF9VUkwgfCBiYXNoCgojIFNldHVwIHRoZSBzZXJmIGFnZW50CmV4cG9ydCBTRVJGX1JPTEU9ImxiIgp3Z2V0IC1PIC0gJFNFUkZfU0VUVVBfVVJMIHw [...]
            },
            "DependsOn": "PublicRouteGlobal"
        },

        "LoadBalancerIP": {
            "Type" : "AWS::EC2::EIP",
            "Properties" : {
                "InstanceId" : { "Ref": "LoadBalancer" },
                "Domain" : "vpc"
            },
            "DependsOn": "VPCGateway"
        },

        "WebGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
                "AvailabilityZones": [
                    { "Fn::GetAtt" : [ "PrivateSubnet", "AvailabilityZone" ] }
                ],
                "LaunchConfigurationName": { "Ref": "WebLaunchConfig" },
                "DesiredCapacity": { "Ref": "WebNodesMin" },
                "MinSize": { "Ref": "WebNodesMin" },
                "MaxSize": { "Ref": "WebNodesMax" },
                "Tags": [
                    { "Key": "Name", "Value": "WebService", "PropagateAtLaunch": "True" },
                    { "Key": "Serf", "Value": "cluster", "PropagateAtLaunch": "True" }
                ],
                "VPCZoneIdentifier": [
                    { "Ref": "PrivateSubnet" }
                ]
            },
            "DependsOn": ["NATDevice", "NATIPAddress", "PrivateRouteGlobal", "MonitorLaunchConfig"]
        },

        "WebLaunchConfig": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
                "ImageId": { "Fn::FindInMap" : [ "AWSINSTAMI", { "Ref" : "AWS::Region" }, "AMI" ]},
                "InstanceType": { "Ref" : "WebInstanceClass" },
                "KeyName": "sshkey",
                "IamInstanceProfile": "ec2role",
                "SecurityGroups": [
                    {"Ref": "InstanceSecurityGroup"}
                ],
                "UserData": "IyEvYmluL2Jhc2gKTk9ERV9TRVRVUF9VUkw9Imh0dHBzOi8vcmF3LmdpdGh1Yi5jb20vZW91c3Bob3Jvcy9zZXJmL21hc3Rlci9kZW1vL3dlYi1sb2FkLWJhbGFuY2VyL3NldHVwX3dlYl9zZXJ2ZXIuc2giCgpTRVJGX1NFVFVQX1VSTD0iaHR0cHM6Ly9yYXcuZ2l0aHViLmNvbS9lb3VzcGhvcm9zL3NlcmYvbWFzdGVyL2RlbW8vd2ViLWxvYWQtYmFsYW5jZXIvc2V0dXBfc2VyZi5zaCIKCiMgU2V0dXAgdGhlIG5vZGUgaXRzZWxmCndnZXQgLU8gLSAkTk9ERV9TRVRVUF9VUkwgfCBiYXNoCgojIFNldHVwIHRoZSBzZXJmIGFnZW50CmV4cG9ydCBTRVJGX1JPTEU9IndlYiIKd2dldCAtTyAtICRTRVJGX1NFVFVQX1VSTCB8IGJ [...]
            }
        },

        "WebScaleUpPolicy" : {
          "Type" : "AWS::AutoScaling::ScalingPolicy",
          "Properties" : {
            "AdjustmentType" : "ChangeInCapacity",
            "AutoScalingGroupName" : { "Ref" : "WebGroup" },
            "Cooldown" : "60",
            "ScalingAdjustment" : "1"
          }
        },

        "WebScaleDownPolicy" : {
          "Type" : "AWS::AutoScaling::ScalingPolicy",
          "Properties" : {
            "AdjustmentType" : "ChangeInCapacity",
            "AutoScalingGroupName" : { "Ref" : "WebGroup" },
            "Cooldown" : "60",
            "ScalingAdjustment" : "-1"
          }
        },
    
        "CPUAlarmHigh": {
         "Type": "AWS::CloudWatch::Alarm",
         "Properties": {
            "AlarmDescription": "Scale-up if CPU > 90% for 10 minutes",
            "MetricName": "CPUUtilization",
            "Namespace": "AWS/EC2",
            "Statistic": "Average",
            "Period": "300",
            "EvaluationPeriods": "2",
            "Threshold": "90",
            "AlarmActions": [ { "Ref": "WebScaleUpPolicy" } ],
            "Dimensions": [
              {
                "Name": "AutoScalingGroupName",
                "Value": { "Ref": "WebGroup" }
              }
            ],
            "ComparisonOperator": "GreaterThanThreshold"
          }
        },

        "CPUAlarmLow": {
         "Type": "AWS::CloudWatch::Alarm",
         "Properties": {
            "AlarmDescription": "Scale-down if CPU < 70% for 10 minutes",
            "MetricName": "CPUUtilization",
            "Namespace": "AWS/EC2",
            "Statistic": "Average",
            "Period": "300",
            "EvaluationPeriods": "2",
            "Threshold": "70",
            "AlarmActions": [ { "Ref": "WebScaleDownPolicy" } ],
            "Dimensions": [
              {
                "Name": "AutoScalingGroupName",
                "Value": { "Ref": "WebGroup" }
              }
            ],
            "ComparisonOperator": "LessThanThreshold"
          }
        },

        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "security group",
                "VpcId": { "Ref": "VPC" },
                "SecurityGroupIngress": [{
                    "IpProtocol": "icmp",
                    "FromPort": "-1",
                    "ToPort": "-1",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "22",
                    "ToPort": "22",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "80",
                    "ToPort": "80",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "8080",
                    "ToPort": "8080",
                    "CidrIp": "0.0.0.0/0"
                }, {
                    "IpProtocol": "tcp",
                    "FromPort": "9999",
                    "ToPort": "9999",
                    "CidrIp": "0.0.0.0/0"
                }]
            }
        },

        "InstanceSecurityGroupSelfRule": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": { "Ref": "InstanceSecurityGroup" },
                "IpProtocol": "-1",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": { "Ref": "InstanceSecurityGroup" }
            }
        }
    }
}
